Se ajusto los breakpoint en: max-width: 360px, (min-width: 361px) and (max-width: 768px), (min-width: 769px) and (max-width: 992px), (min-width: 993px) and (max-width: 1400px)

--- a/css/style.css
+++ b/css/style.css
@@ -147,7 +147,7 @@
 * {
   margin: 0;
   padding: 0;
-  box-sizing: inherit;
+  /*box-sizing: inherit;*/
 }
 
 html {
@@ -1164,6 +1164,10 @@ footer .terminos-y-condiciones .modal-body {
   color: var(--color-white);
   padding: 10px;
 }
+.holy-souce .holy-souce-hero .holy-souce-hero-producto .holy-souce-hero-btn:hover {
+  background-color: var(--color-black-85);
+  transition: all 0.3s;
+}
 .holy-souce .holy-souce-section {
   margin: 100px auto;
 }
@@ -1351,7 +1355,7 @@ footer .terminos-y-condiciones .modal-body {
   margin: auto;
   background-color: var(--color-beige);
   padding: 20px;
-  height: 300px;
+  height: 330px;
   border-radius: 4px;
 }
 .holy-souce .holy-souce-section .holy-souce-section-all-recipes .recipes .recipes-image {
@@ -1360,6 +1364,10 @@ footer .terminos-y-condiciones .modal-body {
 }
 .holy-souce .holy-souce-section .holy-souce-section-all-recipes .recipes .recipes-image img {
   width: 15em;
+}
+.holy-souce .holy-souce-section .holy-souce-section-all-recipes .recipes .recipes-image img:hover {
+  transform: scale(1.1);
+  transition: all 0.3s;
 }
 .holy-souce .holy-souce-section .holy-souce-section-all-recipes .recipes .recipe-description {
   display: flex;
@@ -1487,7 +1495,7 @@ footer .terminos-y-condiciones .modal-body {
  * #######################
 */
 /* Mobile Styles */
-@media only screen and (max-width: 576px) {
+@media only screen and (max-width: 460px) {
   .holy-souce {
     /* Footer */
   }
@@ -1507,12 +1515,25 @@ footer .terminos-y-condiciones .modal-body {
     border: 1px solid var(--color-black);
     color: var(--color-black);
   }
+  .holy-souce .holy-souce-hero .holy-souce-hero-producto .holy-souce-hero-btn:hover {
+    background-color: var(--color-black-85);
+    color: #ffffff;
+    transition: all 0.3s;
+  }
   .holy-souce .holy-souce-hero .holy-souce-hero-title {
     display: none;
   }
   .holy-souce .holy-souce-hero .holy-souce-hero-title-mobile {
     display: block;
     margin-bottom: 30px;
+  }
+  .holy-souce .holy-souce-hero .holy-souce-hero-title-mobile .hero-title-higher h1 {
+    font-family: var(--font-germania-one);
+    color: var(--color-black);
+    font-size: 50px;
+    text-align: center;
+    letter-spacing: 3px;
+    line-height: 1;
   }
   .holy-souce .holy-souce-section.container {
     width: auto;
@@ -1540,6 +1561,7 @@ footer .terminos-y-condiciones .modal-body {
   .holy-souce .holy-souce-section .holy-souce-section-product .product-content .holy-souce-section-product-description {
     display: grid;
     grid-gap: 10px;
+    margin-top: 50px;
   }
   .holy-souce .holy-souce-section .holy-souce-section-product.container {
     padding-left: 0;
@@ -1556,7 +1578,10 @@ footer .terminos-y-condiciones .modal-body {
     display: none;
   }
   .holy-souce .holy-souce-section .holy-souce-section-process .holy-souce-section-process-image img {
-    width: 18em;
+    width: 100%;
+  }
+  .holy-souce .holy-souce-section .holy-souce-section-process .holy-souce-section-process-item {
+    width: 100%;
   }
   .holy-souce .holy-souce-section .holy-souce-section-process .holy-souce-section-process-item .process-item .process-item-title .item-title-number-text .item-title-number p {
     margin-right: 15px;
@@ -1597,6 +1622,374 @@ footer .terminos-y-condiciones .modal-body {
   }
 }
 /* Tablet Styles */
+@media only screen and (min-width: 361px) and (max-width: 768px) {
+  .holy-souce {
+    /* Footer */
+  }
+  .holy-souce .holy-souce-hero {
+    display: flex;
+    flex-direction: column;
+  }
+  .holy-souce .holy-souce-hero .holy-souce-hero-producto {
+    position: initial;
+  }
+  .holy-souce .holy-souce-hero .holy-souce-hero-producto img {
+    width: 15em;
+    margin-top: -150px;
+    position: relative;
+  }
+  .holy-souce .holy-souce-hero .holy-souce-hero-producto .holy-souce-hero-btn {
+    border: 1px solid var(--color-black);
+    color: var(--color-black);
+  }
+  .holy-souce .holy-souce-hero .holy-souce-hero-producto .holy-souce-hero-btn:hover {
+    background-color: var(--color-black-85);
+    color: #ffffff;
+    transition: all 0.3s;
+  }
+  .holy-souce .holy-souce-hero .holy-souce-hero-title {
+    display: none;
+  }
+  .holy-souce .holy-souce-hero .holy-souce-hero-title-mobile {
+    display: block;
+    margin-bottom: 30px;
+  }
+  .holy-souce .holy-souce-hero .holy-souce-hero-title-mobile .hero-title-higher h1 {
+    font-family: var(--font-germania-one);
+    color: var(--color-black);
+    font-size: 50px;
+    text-align: center;
+    letter-spacing: 3px;
+    line-height: 1;
+  }
+  .holy-souce .holy-souce-section.container {
+    width: auto;
+  }
+  .holy-souce .holy-souce-section {
+    margin: 60px auto;
+    /* Section From seeds to bottles - Process */
+    /* Section Watch our Authentic Process */
+    /* Section simple & Tasty recipes */
+  }
+  .holy-souce .holy-souce-section .holy-souce-section-product {
+    width: 100%;
+    margin-top: 150px;
+    height: max-content;
+  }
+  .holy-souce .holy-souce-section .holy-souce-section-product .product-content {
+    display: flex;
+    width: 100%;
+    bottom: 120px;
+  }
+  .holy-souce .holy-souce-section .holy-souce-section-product .product-content .holy-souce-section-product-image .product-image img {
+    width: 8.5em;
+  }
+  .holy-souce .holy-souce-section .holy-souce-section-product .product-content .holy-souce-section-product-description {
+    display: grid;
+    grid-gap: 10px;
+  }
+  .holy-souce .holy-souce-section .holy-souce-section-product.container {
+    padding-left: 0;
+    padding-right: 0;
+  }
+  .holy-souce .holy-souce-section .holy-souce-section-process {
+    width: auto;
+    margin: auto;
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+  }
+  .holy-souce .holy-souce-section .holy-souce-section-process .holy-souce-section-process-background {
+    display: none;
+  }
+  .holy-souce .holy-souce-section .holy-souce-section-process .holy-souce-section-process-image img {
+    width: 100%;
+  }
+  .holy-souce .holy-souce-section .holy-souce-section-process .holy-souce-section-process-item {
+    width: 100%;
+  }
+  .holy-souce .holy-souce-section .holy-souce-section-process .holy-souce-section-process-item .process-item .process-item-title .item-title-number-text .item-title-number p {
+    margin-right: 15px;
+  }
+  .holy-souce .holy-souce-section .holy-souce-section-process .holy-souce-section-process-item .process-item .process-item-title .item-title-number-text .item-title-text p {
+    font-size: 18px;
+  }
+  .holy-souce .holy-souce-section .holy-souce-section-video .holy-souce-section-product-video video {
+    width: 100%;
+  }
+  .holy-souce .holy-souce-section .holy-souce-section-all-recipes {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    grid-template-rows: repeat(2, 1fr);
+    grid-gap: 120px 10px;
+    justify-content: center;
+    align-items: center;
+    align-content: center;
+    margin: 120px auto;
+    width: 100%;
+  }
+  .holy-souce .holy-souce-section .holy-souce-section-all-recipes .recipes {
+    padding: 5px;
+  }
+  .holy-souce .holy-souce-section .holy-souce-section-all-recipes .recipes .recipes-image img {
+    width: 10em;
+  }
+  .holy-souce .holy-souce-section .holy-souce-section-all-recipes .recipes .recipe-description .recipes-title p {
+    font-size: 18px;
+  }
+  .holy-souce .footer-holy-souce {
+    padding: 10px 0px;
+  }
+  .holy-souce .footer-holy-souce .legal-liks {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+  }
+}
+@media only screen and (min-width: 769px) and (max-width: 992px) {
+  .holy-souce {
+    /* Footer */
+  }
+  .holy-souce .holy-souce-hero {
+    display: flex;
+    flex-direction: column;
+  }
+  .holy-souce .holy-souce-hero .holy-souce-hero-producto {
+    position: initial;
+  }
+  .holy-souce .holy-souce-hero .holy-souce-hero-producto img {
+    width: 15em;
+    margin-top: -350px;
+    position: relative;
+  }
+  .holy-souce .holy-souce-hero .holy-souce-hero-producto .holy-souce-hero-btn {
+    border: 1px solid var(--color-black);
+    color: var(--color-black);
+  }
+  .holy-souce .holy-souce-hero .holy-souce-hero-producto .holy-souce-hero-btn:hover {
+    background-color: var(--color-black-85);
+    color: #ffffff;
+    transition: all 0.3s;
+  }
+  .holy-souce .holy-souce-hero .holy-souce-hero-title {
+    display: none;
+  }
+  .holy-souce .holy-souce-hero .holy-souce-hero-title-mobile {
+    display: block;
+    margin-bottom: 30px;
+  }
+  .holy-souce .holy-souce-hero .holy-souce-hero-title-mobile .hero-title-higher h1 {
+    font-family: var(--font-germania-one);
+    color: var(--color-black);
+    font-size: 50px;
+    text-align: center;
+    letter-spacing: 3px;
+    line-height: 1;
+  }
+  .holy-souce .holy-souce-section.container {
+    width: auto;
+  }
+  .holy-souce .holy-souce-section {
+    margin: 60px auto;
+    /* Section From seeds to bottles - Process */
+    /* Section Watch our Authentic Process */
+    /* Section simple & Tasty recipes */
+  }
+  .holy-souce .holy-souce-section .holy-souce-section-product {
+    width: 100%;
+    margin-top: 150px;
+  }
+  .holy-souce .holy-souce-section .holy-souce-section-product .product-content {
+    display: flex;
+    width: 100%;
+    bottom: 120px;
+  }
+  .holy-souce .holy-souce-section .holy-souce-section-product .product-content .holy-souce-section-product-image .product-image img {
+    width: 8.5em;
+  }
+  .holy-souce .holy-souce-section .holy-souce-section-product .product-content .holy-souce-section-product-description {
+    display: grid;
+    grid-gap: 10px;
+  }
+  .holy-souce .holy-souce-section .holy-souce-section-product.container {
+    padding-left: 0;
+    padding-right: 0;
+  }
+  .holy-souce .holy-souce-section .holy-souce-section-process {
+    width: auto;
+    margin: auto;
+    display: flex;
+    align-items: center;
+  }
+  .holy-souce .holy-souce-section .holy-souce-section-process .holy-souce-section-process-background {
+    display: none;
+  }
+  .holy-souce .holy-souce-section .holy-souce-section-process .holy-souce-section-process-image img {
+    width: 90%;
+  }
+  .holy-souce .holy-souce-section .holy-souce-section-process .holy-souce-section-process-item {
+    width: 100%;
+  }
+  .holy-souce .holy-souce-section .holy-souce-section-process .holy-souce-section-process-item .process-item .process-item-title .item-title-number-text .item-title-number p {
+    margin-right: 15px;
+  }
+  .holy-souce .holy-souce-section .holy-souce-section-process .holy-souce-section-process-item .process-item .process-item-title .item-title-number-text .item-title-text p {
+    font-size: 18px;
+  }
+  .holy-souce .holy-souce-section .holy-souce-section-video .holy-souce-section-product-video video {
+    width: 100%;
+  }
+  .holy-souce .holy-souce-section .holy-souce-section-all-recipes {
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    grid-template-rows: repeat(1, 1fr);
+    grid-gap: 120px 10px;
+    justify-content: center;
+    align-items: center;
+    align-content: center;
+    margin: 100px auto;
+    width: 100%;
+  }
+  .holy-souce .holy-souce-section .holy-souce-section-all-recipes .recipes {
+    padding: 15px;
+  }
+  .holy-souce .holy-souce-section .holy-souce-section-all-recipes .recipes .recipes-image img {
+    width: 10em;
+  }
+  .holy-souce .holy-souce-section .holy-souce-section-all-recipes .recipes .recipe-description .recipes-title p {
+    font-size: 18px;
+  }
+  .holy-souce .footer-holy-souce {
+    padding: 10px 0px;
+  }
+  .holy-souce .footer-holy-souce .legal-liks {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+  }
+}
+@media only screen and (min-width: 993px) and (max-width: 1400px) {
+  .holy-souce {
+    /* Footer */
+  }
+  .holy-souce .holy-souce-hero {
+    display: flex;
+    flex-direction: column;
+  }
+  .holy-souce .holy-souce-hero .holy-souce-hero-producto {
+    position: initial;
+  }
+  .holy-souce .holy-souce-hero .holy-souce-hero-producto img {
+    width: 15em;
+    margin-top: -350px;
+    position: relative;
+  }
+  .holy-souce .holy-souce-hero .holy-souce-hero-producto .holy-souce-hero-btn {
+    border: 1px solid var(--color-black);
+    color: var(--color-black);
+  }
+  .holy-souce .holy-souce-hero .holy-souce-hero-producto .holy-souce-hero-btn:hover {
+    background-color: var(--color-black-85);
+    color: #ffffff;
+    transition: all 0.3s;
+  }
+  .holy-souce .holy-souce-hero .holy-souce-hero-title {
+    display: none;
+  }
+  .holy-souce .holy-souce-hero .holy-souce-hero-title-mobile {
+    display: block;
+    margin-bottom: 30px;
+  }
+  .holy-souce .holy-souce-hero .holy-souce-hero-title-mobile .hero-title-higher h1 {
+    font-family: var(--font-germania-one);
+    color: var(--color-black);
+    font-size: 50px;
+    text-align: center;
+    letter-spacing: 3px;
+    line-height: 1;
+  }
+  .holy-souce .holy-souce-section.container {
+    width: auto;
+  }
+  .holy-souce .holy-souce-section {
+    margin: 60px auto;
+    /* Section From seeds to bottles - Process */
+    /* Section Watch our Authentic Process */
+    /* Section simple & Tasty recipes */
+  }
+  .holy-souce .holy-souce-section .holy-souce-section-product {
+    width: 100%;
+    margin-top: 150px;
+  }
+  .holy-souce .holy-souce-section .holy-souce-section-product .product-content {
+    display: flex;
+    width: 100%;
+    bottom: 120px;
+  }
+  .holy-souce .holy-souce-section .holy-souce-section-product .product-content .holy-souce-section-product-image .product-image img {
+    width: 8.5em;
+  }
+  .holy-souce .holy-souce-section .holy-souce-section-product .product-content .holy-souce-section-product-description {
+    display: grid;
+    grid-gap: 10px;
+  }
+  .holy-souce .holy-souce-section .holy-souce-section-product.container {
+    padding-left: 0;
+    padding-right: 0;
+  }
+  .holy-souce .holy-souce-section .holy-souce-section-process {
+    width: auto;
+    margin: auto;
+    display: flex;
+    align-items: center;
+  }
+  .holy-souce .holy-souce-section .holy-souce-section-process .holy-souce-section-process-background {
+    display: none;
+  }
+  .holy-souce .holy-souce-section .holy-souce-section-process .holy-souce-section-process-image img {
+    width: 90%;
+  }
+  .holy-souce .holy-souce-section .holy-souce-section-process .holy-souce-section-process-item {
+    width: 100%;
+  }
+  .holy-souce .holy-souce-section .holy-souce-section-process .holy-souce-section-process-item .process-item .process-item-title .item-title-number-text .item-title-number p {
+    margin-right: 15px;
+  }
+  .holy-souce .holy-souce-section .holy-souce-section-process .holy-souce-section-process-item .process-item .process-item-title .item-title-number-text .item-title-text p {
+    font-size: 18px;
+  }
+  .holy-souce .holy-souce-section .holy-souce-section-video .holy-souce-section-product-video video {
+    width: 100%;
+  }
+  .holy-souce .holy-souce-section .holy-souce-section-all-recipes {
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    grid-template-rows: repeat(1, 1fr);
+    grid-gap: 120px 10px;
+    justify-content: center;
+    align-items: center;
+    align-content: center;
+    margin: 100px auto;
+    width: 100%;
+  }
+  .holy-souce .holy-souce-section .holy-souce-section-all-recipes .recipes {
+    padding: 15px;
+  }
+  .holy-souce .holy-souce-section .holy-souce-section-all-recipes .recipes .recipes-image img {
+    width: 10em;
+  }
+  .holy-souce .holy-souce-section .holy-souce-section-all-recipes .recipes .recipe-description .recipes-title p {
+    font-size: 18px;
+  }
+  .holy-souce .footer-holy-souce {
+    padding: 10px 0px;
+  }
+  .holy-souce .footer-holy-souce .legal-liks {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+  }
+}
 /* Desktop Styles */
 /*
  * #######################
