--- a/scss/base/_index.scss
+++ b/scss/base/_index.scss
@@ -106,7 +106,12 @@
                 align-items: center;
                 width: 8em;
                 color: var(--color-white);
-                padding:10px
+                padding:10px;
+
+                &:hover {
+                    background-color: var(--color-black-85);
+                    transition: all 0.3s;
+                }
             }
         }
     }
@@ -361,7 +366,7 @@
                 margin: auto;
                 background-color: var(--color-beige);
                 padding: 20px;
-                height: 300px;
+                height: 330px;
                 border-radius:4px;
 
                 .recipes-image {
@@ -370,6 +375,11 @@
 
                     img {
                         width: 15em;
+
+                        &:hover {
+                            transform: scale(1.1);
+                            transition: all 0.3s;
+                        }
                     }
                 }
 
